--- a/project/environment.yml
+++ b/project/environment.yml
@@ -54,28 +54,54 @@ dependencies:
   - tornado=6.4=py312h41838bb_0
   - traitlets=5.14.3=pyhd8ed1ab_0
   - typing_extensions=4.11.0=pyha770c72_0
-  - tzdata=2024a=h0c530f3_0
   - wcwidth=0.2.13=pyhd8ed1ab_0
   - wheel=0.43.0=pyhd8ed1ab_1
   - xz=5.2.6=h775f41a_0
   - zeromq=4.3.5=h8d87b8b_3
   - zipp=3.17.0=pyhd8ed1ab_0
   - pip:
+      - certifi==2024.2.2
+      - charset-normalizer==3.3.2
       - contourpy==1.2.1
       - cycler==0.12.1
+      - et-xmlfile==1.1.0
       - filelock==3.14.0
       - fonttools==4.51.0
       - fsspec==2024.3.1
+      - huggingface-hub==0.23.0
+      - idna==3.7
+      - imageio==2.34.1
+      - ipywidgets==8.1.2
       - jinja2==3.1.3
+      - joblib==1.4.2
+      - jupyterlab-widgets==3.0.10
       - kiwisolver==1.4.5
+      - lazy-loader==0.4
       - markupsafe==2.1.5
       - matplotlib==3.8.4
       - mpmath==1.3.0
       - networkx==3.3
       - numpy==1.26.4
+      - opencv-python==4.9.0.80
+      - openpyxl==3.1.2
+      - pandas==2.2.2
       - pillow==10.3.0
       - pyparsing==3.1.2
+      - pytz==2024.1
+      - pyyaml==6.0.1
+      - requests==2.32.1
+      - safetensors==0.4.3
+      - scikit-image==0.23.2
+      - scikit-learn==1.4.2
+      - scipy==1.13.0
       - sympy==1.12
+      - threadpoolctl==3.5.0
+      - tifffile==2024.5.3
+      - timm==1.0.3
       - torch==2.2.2
+      - torchvision==0.17.2
       - tqdm==4.66.4
+      - tzdata==2024.1
+      - urllib3==2.2.1
+      - widgetsnbextension==4.0.10
 prefix: /usr/local/anaconda3/envs/iapr-project
