--- a/project/requirements.txt
+++ b/project/requirements.txt
@@ -1,23 +1,33 @@
 appnope @ file:///home/conda/feedstock_root/build_artifacts/appnope_1707233003401/work
 asttokens @ file:///home/conda/feedstock_root/build_artifacts/asttokens_1698341106958/work
+certifi==2024.2.2
+charset-normalizer==3.3.2
 comm @ file:///home/conda/feedstock_root/build_artifacts/comm_1710320294760/work
 contourpy==1.2.1
 cycler==0.12.1
 debugpy @ file:///Users/runner/miniforge3/conda-bld/debugpy_1707444542994/work
 decorator @ file:///home/conda/feedstock_root/build_artifacts/decorator_1641555617451/work
+et-xmlfile==1.1.0
 exceptiongroup @ file:///home/conda/feedstock_root/build_artifacts/exceptiongroup_1704921103267/work
 executing @ file:///home/conda/feedstock_root/build_artifacts/executing_1698579936712/work
 filelock==3.14.0
 fonttools==4.51.0
 fsspec==2024.3.1
+huggingface-hub==0.23.0
+idna==3.7
+imageio==2.34.1
 importlib_metadata @ file:///home/conda/feedstock_root/build_artifacts/importlib-metadata_1710971335535/work
 ipykernel @ file:///Users/runner/miniforge3/conda-bld/ipykernel_1708996616394/work
 ipython @ file:///home/conda/feedstock_root/build_artifacts/ipython_1709559745751/work
+ipywidgets==8.1.2
 jedi @ file:///home/conda/feedstock_root/build_artifacts/jedi_1696326070614/work
 Jinja2==3.1.3
+joblib==1.4.2
 jupyter_client @ file:///home/conda/feedstock_root/build_artifacts/jupyter_client_1710255804825/work
 jupyter_core @ file:///Users/runner/miniforge3/conda-bld/jupyter_core_1710257288950/work
+jupyterlab_widgets==3.0.10
 kiwisolver==1.4.5
+lazy_loader==0.4
 MarkupSafe==2.1.5
 matplotlib==3.8.4
 matplotlib-inline @ file:///home/conda/feedstock_root/build_artifacts/matplotlib-inline_1713250518406/work
@@ -25,7 +35,10 @@ mpmath==1.3.0
 nest_asyncio @ file:///home/conda/feedstock_root/build_artifacts/nest-asyncio_1705850609492/work
 networkx==3.3
 numpy==1.26.4
+opencv-python==4.9.0.80
+openpyxl==3.1.2
 packaging @ file:///home/conda/feedstock_root/build_artifacts/packaging_1710075952259/work
+pandas==2.2.2
 parso @ file:///home/conda/feedstock_root/build_artifacts/parso_1712320355065/work
 pexpect @ file:///home/conda/feedstock_root/build_artifacts/pexpect_1706113125309/work
 pickleshare @ file:///home/conda/feedstock_root/build_artifacts/pickleshare_1602536217715/work
@@ -38,16 +51,30 @@ pure-eval @ file:///home/conda/feedstock_root/build_artifacts/pure_eval_16428759
 Pygments @ file:///home/conda/feedstock_root/build_artifacts/pygments_1700607939962/work
 pyparsing==3.1.2
 python-dateutil @ file:///home/conda/feedstock_root/build_artifacts/python-dateutil_1709299778482/work
+pytz==2024.1
+PyYAML==6.0.1
 pyzmq @ file:///Users/runner/miniforge3/conda-bld/pyzmq_1713635623176/work
+requests==2.32.1
+safetensors==0.4.3
+scikit-image==0.23.2
+scikit-learn==1.4.2
+scipy==1.13.0
 setuptools==69.5.1
 six @ file:///home/conda/feedstock_root/build_artifacts/six_1620240208055/work
 stack-data @ file:///home/conda/feedstock_root/build_artifacts/stack_data_1669632077133/work
 sympy==1.12
+threadpoolctl==3.5.0
+tifffile==2024.5.3
+timm==1.0.3
 torch==2.2.2
+torchvision==0.17.2
 tornado @ file:///Users/runner/miniforge3/conda-bld/tornado_1708363185423/work
 tqdm==4.66.4
 traitlets @ file:///home/conda/feedstock_root/build_artifacts/traitlets_1713535121073/work
 typing_extensions @ file:///home/conda/feedstock_root/build_artifacts/typing_extensions_1712329955671/work
+tzdata==2024.1
+urllib3==2.2.1
 wcwidth @ file:///home/conda/feedstock_root/build_artifacts/wcwidth_1704731205417/work
 wheel==0.43.0
+widgetsnbextension==4.0.10
 zipp @ file:///home/conda/feedstock_root/build_artifacts/zipp_1695255097490/work
