--- a/project/requirements.txt
+++ b/project/requirements.txt
@@ -1,80 +1,103 @@
-appnope @ file:///home/conda/feedstock_root/build_artifacts/appnope_1707233003401/work
-asttokens @ file:///home/conda/feedstock_root/build_artifacts/asttokens_1698341106958/work
-certifi==2024.2.2
-charset-normalizer==3.3.2
-comm @ file:///home/conda/feedstock_root/build_artifacts/comm_1710320294760/work
-contourpy==1.2.1
-cycler==0.12.1
-debugpy @ file:///Users/runner/miniforge3/conda-bld/debugpy_1707444542994/work
-decorator @ file:///home/conda/feedstock_root/build_artifacts/decorator_1641555617451/work
-et-xmlfile==1.1.0
-exceptiongroup @ file:///home/conda/feedstock_root/build_artifacts/exceptiongroup_1704921103267/work
-executing @ file:///home/conda/feedstock_root/build_artifacts/executing_1698579936712/work
-filelock==3.14.0
-fonttools==4.51.0
-fsspec==2024.3.1
-huggingface-hub==0.23.0
-idna==3.7
-imageio==2.34.1
-importlib_metadata @ file:///home/conda/feedstock_root/build_artifacts/importlib-metadata_1710971335535/work
-ipykernel @ file:///Users/runner/miniforge3/conda-bld/ipykernel_1708996616394/work
-ipython @ file:///home/conda/feedstock_root/build_artifacts/ipython_1709559745751/work
-ipywidgets==8.1.2
-jedi @ file:///home/conda/feedstock_root/build_artifacts/jedi_1696326070614/work
-Jinja2==3.1.3
-joblib==1.4.2
-jupyter_client @ file:///home/conda/feedstock_root/build_artifacts/jupyter_client_1710255804825/work
-jupyter_core @ file:///Users/runner/miniforge3/conda-bld/jupyter_core_1710257288950/work
-jupyterlab_widgets==3.0.10
-kiwisolver==1.4.5
-lazy_loader==0.4
-MarkupSafe==2.1.5
-matplotlib==3.8.4
-matplotlib-inline @ file:///home/conda/feedstock_root/build_artifacts/matplotlib-inline_1713250518406/work
-mpmath==1.3.0
-nest_asyncio @ file:///home/conda/feedstock_root/build_artifacts/nest-asyncio_1705850609492/work
-networkx==3.3
-numpy==1.26.4
-opencv-python==4.9.0.80
-openpyxl==3.1.2
-packaging @ file:///home/conda/feedstock_root/build_artifacts/packaging_1710075952259/work
-pandas==2.2.2
-parso @ file:///home/conda/feedstock_root/build_artifacts/parso_1712320355065/work
-pexpect @ file:///home/conda/feedstock_root/build_artifacts/pexpect_1706113125309/work
-pickleshare @ file:///home/conda/feedstock_root/build_artifacts/pickleshare_1602536217715/work
-pillow==10.3.0
-platformdirs @ file:///home/conda/feedstock_root/build_artifacts/platformdirs_1713912794367/work
-prompt-toolkit @ file:///home/conda/feedstock_root/build_artifacts/prompt-toolkit_1702399386289/work
-psutil @ file:///Users/runner/miniforge3/conda-bld/psutil_1705722450561/work
-ptyprocess @ file:///home/conda/feedstock_root/build_artifacts/ptyprocess_1609419310487/work/dist/ptyprocess-0.7.0-py2.py3-none-any.whl
-pure-eval @ file:///home/conda/feedstock_root/build_artifacts/pure_eval_1642875951954/work
-Pygments @ file:///home/conda/feedstock_root/build_artifacts/pygments_1700607939962/work
-pyparsing==3.1.2
-python-dateutil @ file:///home/conda/feedstock_root/build_artifacts/python-dateutil_1709299778482/work
-pytz==2024.1
-PyYAML==6.0.1
-pyzmq @ file:///Users/runner/miniforge3/conda-bld/pyzmq_1713635623176/work
-requests==2.32.1
-safetensors==0.4.3
-scikit-image==0.23.2
-scikit-learn==1.4.2
-scipy==1.13.0
-setuptools==69.5.1
-six @ file:///home/conda/feedstock_root/build_artifacts/six_1620240208055/work
-stack-data @ file:///home/conda/feedstock_root/build_artifacts/stack_data_1669632077133/work
-sympy==1.12
-threadpoolctl==3.5.0
-tifffile==2024.5.3
-timm==1.0.3
-torch==2.2.2
-torchvision==0.17.2
-tornado @ file:///Users/runner/miniforge3/conda-bld/tornado_1708363185423/work
-tqdm==4.66.4
-traitlets @ file:///home/conda/feedstock_root/build_artifacts/traitlets_1713535121073/work
-typing_extensions @ file:///home/conda/feedstock_root/build_artifacts/typing_extensions_1712329955671/work
-tzdata==2024.1
-urllib3==2.2.1
-wcwidth @ file:///home/conda/feedstock_root/build_artifacts/wcwidth_1704731205417/work
-wheel==0.43.0
-widgetsnbextension==4.0.10
-zipp @ file:///home/conda/feedstock_root/build_artifacts/zipp_1695255097490/work
+# This file may be used to create an environment using:
+# $ conda create --name <env> --file <this file>
+# platform: osx-64
+appnope=0.1.4=pyhd8ed1ab_0
+asttokens=2.4.1=pyhd8ed1ab_0
+bzip2=1.0.8=h10d778d_5
+ca-certificates=2024.2.2=h8857fd0_0
+certifi=2024.2.2=pypi_0
+charset-normalizer=3.3.2=pypi_0
+comm=0.2.2=pyhd8ed1ab_0
+contourpy=1.2.1=pypi_0
+cycler=0.12.1=pypi_0
+debugpy=1.8.1=py312hede676d_0
+decorator=5.1.1=pyhd8ed1ab_0
+et-xmlfile=1.1.0=pypi_0
+exceptiongroup=1.2.0=pyhd8ed1ab_2
+executing=2.0.1=pyhd8ed1ab_0
+filelock=3.14.0=pypi_0
+fonttools=4.51.0=pypi_0
+fsspec=2024.3.1=pypi_0
+huggingface-hub=0.23.0=pypi_0
+idna=3.7=pypi_0
+imageio=2.34.1=pypi_0
+importlib-metadata=7.1.0=pyha770c72_0
+importlib_metadata=7.1.0=hd8ed1ab_0
+ipykernel=6.29.3=pyh3cd1d5f_0
+ipython=8.22.2=pyh707e725_0
+ipywidgets=8.1.2=pypi_0
+jedi=0.19.1=pyhd8ed1ab_0
+jinja2=3.1.3=pypi_0
+joblib=1.4.2=pypi_0
+jupyter_client=8.6.1=pyhd8ed1ab_0
+jupyter_core=5.7.2=py312hb401068_0
+jupyterlab-widgets=3.0.10=pypi_0
+kiwisolver=1.4.5=pypi_0
+krb5=1.21.2=hb884880_0
+lazy-loader=0.4=pypi_0
+libcxx=16.0.6=hd57cbcb_0
+libedit=3.1.20191231=h0678c8f_2
+libexpat=2.6.2=h73e2aa4_0
+libffi=3.4.2=h0d85af4_5
+libsodium=1.0.18=hbcb3906_1
+libsqlite=3.45.3=h92b6c6a_0
+libzlib=1.2.13=h8a1eda9_5
+markupsafe=2.1.5=pypi_0
+matplotlib=3.8.4=pypi_0
+matplotlib-inline=0.1.7=pyhd8ed1ab_0
+mpmath=1.3.0=pypi_0
+ncurses=6.4.20240210=h73e2aa4_0
+nest-asyncio=1.6.0=pyhd8ed1ab_0
+networkx=3.3=pypi_0
+numpy=1.26.4=pypi_0
+opencv-python=4.9.0.80=pypi_0
+openpyxl=3.1.2=pypi_0
+openssl=3.3.0=hd75f5a5_0
+packaging=24.0=pyhd8ed1ab_0
+pandas=2.2.2=pypi_0
+parso=0.8.4=pyhd8ed1ab_0
+pexpect=4.9.0=pyhd8ed1ab_0
+pickleshare=0.7.5=py_1003
+pillow=10.3.0=pypi_0
+pip=24.0=pyhd8ed1ab_0
+platformdirs=4.2.1=pyhd8ed1ab_0
+prompt-toolkit=3.0.42=pyha770c72_0
+psutil=5.9.8=py312h41838bb_0
+ptyprocess=0.7.0=pyhd3deb0d_0
+pure_eval=0.2.2=pyhd8ed1ab_0
+pygments=2.17.2=pyhd8ed1ab_0
+pyparsing=3.1.2=pypi_0
+python=3.12.3=h1411813_0_cpython
+python-dateutil=2.9.0=pyhd8ed1ab_0
+python_abi=3.12=4_cp312
+pytz=2024.1=pypi_0
+pyyaml=6.0.1=pypi_0
+pyzmq=26.0.2=py312h18237bf_0
+readline=8.2=h9e318b2_1
+requests=2.32.1=pypi_0
+safetensors=0.4.3=pypi_0
+scikit-image=0.23.2=pypi_0
+scikit-learn=1.4.2=pypi_0
+scipy=1.13.0=pypi_0
+setuptools=69.5.1=pyhd8ed1ab_0
+six=1.16.0=pyh6c4a22f_0
+stack_data=0.6.2=pyhd8ed1ab_0
+sympy=1.12=pypi_0
+threadpoolctl=3.5.0=pypi_0
+tifffile=2024.5.3=pypi_0
+timm=1.0.3=pypi_0
+tk=8.6.13=h1abcd95_1
+torch=2.2.2=pypi_0
+torchvision=0.17.2=pypi_0
+tornado=6.4=py312h41838bb_0
+tqdm=4.66.4=pypi_0
+traitlets=5.14.3=pyhd8ed1ab_0
+typing_extensions=4.11.0=pyha770c72_0
+tzdata=2024.1=pypi_0
+urllib3=2.2.1=pypi_0
+wcwidth=0.2.13=pyhd8ed1ab_0
+wheel=0.43.0=pyhd8ed1ab_1
+widgetsnbextension=4.0.10=pypi_0
+xz=5.2.6=h775f41a_0
+zeromq=4.3.5=h8d87b8b_3
+zipp=3.17.0=pyhd8ed1ab_0
